Fix CSS bugs on Yo Quiero Saber homepage
Add spacing between the two main columns when they collapse into a
vertical stack on mobiles.

Remove default browser border on Google Docs iframe.

And stop the header logo being blown up and cropped on narrow
screens, also adding some margin-top to line it up with the social
media links.

--- a/elections/ar_elections_2015/static/candidates/style.scss
+++ b/elections/ar_elections_2015/static/candidates/style.scss
@@ -133,11 +133,16 @@ a {
         height: 53px * 0.75;
         background-size: 230px * 0.75;
         margin-left: 0;
+        margin-top: 0.5em;
     }
 
     @media ($high_dpi_screen) {
         background-image: url(img/logo-yqs-investigacion@2.png);
         background-size: 230px;
+
+        @media (max-width: 30em) {
+            background-size: 230px * 0.75;
+        }
     }
 }
 
@@ -301,6 +306,10 @@ body.finder .content {
     background-color: darken($color-offwhite, 5%);
 }
 
+.finder__getting-started__demo {
+    margin-bottom: 2em;
+}
+
 .finder__intro {
     p {
         font-size: 1.2em;
@@ -336,6 +345,7 @@ body.finder .content {
         left: 0;
         width: 100%;
         height: 100%;
+        border: none;
     }
 }
 
